# MyDigitNet

./: CMakeLists.txt  README.md
include/glad/: glad.h
src/: Config.txt  Matrix.cpp  Matrix.h  Weights.txt  activateFunction.cpp  activateFunction.h  dataset.cpp  dataset.h  glad.c  main.cpp  netWork.cpp  netWork.h
